# laLessive

./: .gitignore  0master.pd  LessiveMidi.pd  README.md  conduite-lessive.txt  conduite-test.txt  conduite-test2.txt  conduite.txt  conduite_backup_diapo_bombeA.txt  midiplay.pd  netMidiCtl.pd  runOSC.sh  runOSC_desktop.sh  teleco.json  teleco.pd
1-Lavage/: 0master.pd  LessiveMidi.pd  conduite.txt  midiplay.pd  runOSC.sh  teleco.json
1-Lavage/abs/: keyon.pd
1-Lavage/midifiles/: 0-GetLuckyDaftPunk.mid  0-HelpBeatles.mid  0-Telephone_Un_Autre_Monde.mid  0-wagner-ride-of-the-valkyries1.mid
1-Lavage/seq/: proj-tmp.pd  ramp.pd  rampe.pd
2-Essorage/: 0main.pd  DMXout.pd  Leds.pd  Pixels.pd  Tourneurs.pd  essorage.json  rem.pd  runOSC.sh  runOSC_aux.sh  start.pd
2-Essorage/1TELECO_OSC/: Automatic.pd  Bparam_f.pd  Brepeat_control.pd  CONTROLrecorder_teleco.pd  Control.pd  DMX.pd  OnetoAll.pd  Pixel.pd  ProjoFixe.pd  ProjoFixes.pd  Settings.pd  TelecoMaster.pd  Tourneurs.pd  apfx2.pd  apfx2c.pd  dmxmode_chan.pd  getip.sh  line_2f.pd  param_2f.pd  param_3f.pd  param_8f.pd  param_common.pd  param_f.pd  param_group.pd  presets_teleco.pd  proj.pd  runOSC.sh  (+7 more)
2-Essorage/pico-fruitpwm/pwmfruit_test/: CMakeLists.txt  fraise_buffers.c
abs/: StepMotor.pd  fraise.pd  keyon.pd
docs/: cablage-laLessive.qet
midifiles/: 0-ACDCHighwayToHospitall.mid  0-BOB_MARLEY_-_Jamming__KAR.mid  0-Freakout.mid  0-IFeelGoodJamesBrown.mid  0-Kraftwerk_Radio_Aktivitaet.mid  0-Kung fu fighting K.mid  0-Mission impossible.mid  0-PINK_FLOYD_-_Money.mid  0-let's Danse.mid
seq/: alias.pd  lampe.pd  main.pd  metro.pd  moment.pd  proj.pd  rampe.pd  treuil.pd
tools/led/pico-fruitpwm/blink/: CMakeLists.txt
transitions/: test1.txt
(+121 files in other folders)
